[package]
name = "hello_macro_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = {version= "1.0", features=["full","extra-traits", "parsing"]}
quote = "1.0"
ts-rs-macros = "6.2.0"
proc-macro2 = "1"
